# Gadolinium

src/: common.hpp
src/backend/: Core.cpp
src/backend/core/: CMakeLists.txt  JIT.cpp  JIT.hpp  Mem.cpp
src/backend/core/interpreter/: decode.cpp
src/backend/core/jit/: decode.cpp
src/backend/core/mmio/: PIF.cpp
src/backend/core/registers/: Cop0.cpp  Cop0.hpp  Registers.cpp
src/backend/core/rsp/: instructions.cpp
src/frontend/: CMakeLists.txt
src/utils/: FloatingPoint.hpp
